# Disinfection-Robot

./: README.md
Mandoline/: mandoline.cpp  mandoline.hpp
uvc/: CMakeLists.txt  CMakeLists2.txt  package.xml
uvc/src/: client.cpp  server.cpp
uvc/srv/: set_lamp.srv
ydlidar_ros-master/launch/: lidar.rviz  lidar_view.launch
